[package]
name = "drop"
version = "0.1.0"
edition = "2024"

[lib]
name = "drop"
path = "src/lib.rs"

[[bin]]
name = "drop"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures-util = "0.3"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.36.1"
tokio-stream = "0.1"
color-eyre = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
futures-core = "0.3"
tower = { version = "0.5", features = ["limit", "buffer", "timeout"] }
tower-http = { version = "0.6", features = ["limit", "cors"] }
regex = "1.0"
sanitize-filename = "0.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["multipart", "json"] }
